--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -1,4 +1,4 @@
-@use 'variables';
+@use 'variables' as v;
 
 .container {
   width: 1100px;
@@ -76,8 +76,8 @@
 
 
 .read-more {
-  color: variables.$primary-color;
-  border-bottom: 1px solid variables.$primary-color;
+  color: v.$primary-color;
+  border-bottom: 1px solid v.$primary-color;
 }
 
 .category-page-header {
@@ -98,13 +98,13 @@
   font-size: 14px;
 
   .sort a {
-    color: variables.$primary-color;
+    color: v.$primary-color;
     text-decoration: none;
     margin: 0 5px;
 
     &.active {
       font-weight: bold;
-      border-bottom: 2px solid variables.$primary-color;
+      border-bottom: 2px solid v.$primary-color;
     }
   }
 }
@@ -123,12 +123,12 @@
     color: #333;
 
     &.active {
-      background: variables.$primary-color;
+      background: v.$primary-color;
       color: #fff;
     }
 
     &:hover {
-      background: variables.$primary-hover;
+      background: v.$primary-hover;
       color: #fff;
     }
   }
@@ -194,7 +194,7 @@
   font-size: 20px;
   font-weight: bold;
   text-decoration: none;
-  color: variables.$primary-color;
+  color: v.$primary-color;
 }
 
 .main-nav a {
@@ -204,7 +204,7 @@
   font-size: 14px;
 
   &:hover {
-    color: variables.$primary-color;
+    color: v.$primary-color;
   }
 }
 
